css/index.css
/* ... */
.section_details-content {
  padding-top: 31px; }

.details_content-figure,
.image_list,
.photo_information-list {
  display: grid; }

.details_content-breadcrumb {
  position: relative; }

.breadcrumb-link {
  color: rgba(0, 0, 0, 0.5);
  padding-left: calc(14px + 10px); }

.breadcrumb-link::before {
  content: "";
  background-image: url("../images/icon_arrow_left.svg");
  display: block;
  position: absolute;
  top: 5px;
  left: 0;
  width: 14px;
  height: 8px; }

.details_content-heading {
  font-size: 52px; }

.details_content-header-paragraph {
  font-size: 18px; }

@media (min-width: 1440px) {
  .section_details-content {
    display: grid;
    grid-gap: 2rem; }
  .details_content-heading {
    font-size: 72px;
    max-width: 457px; } }

.details_content-figure {
  grid-gap: 10px;
  padding-top: calc(82px - 32px);
  padding-bottom: calc(92px - 32px); }

.image-active,
.details_content-figure-picture {
  max-width: 100%;
  max-height: 215px; }

.image_list {
  grid-gap: 10.5px;
  grid-template-columns: repeat(9, 1fr);
  overflow: hidden; }

.small-image,
.image-active {
  border-radius: 5px; }

.small-image {
  max-width: 137px;
  max-height: 85px; }

.not-active {
  opacity: 0.5; }

@media (min-width: 1440px) {
  .details_content-figure {
    grid-column: 1/3;
    max-width: 1170px; }
  .image-active,
  .details_content-figure-picture {
    max-width: 1170px;
    max-height: 728px; }
  .image_list {
    overflow: visible; }
  .photo_information-list {
    max-width: 443px;
    max-height: 152px;
    align-items: flex-end;
    grid-column: 1; } }

.photo_information-list {
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 40px; }

.photo_information-list-item {
  display: flex;
  flex-direction: column; }

.information-detail {
  font-weight: 700; }

.summary_article-heading {
  font-size: 40px; }

.details_content-summary-article {
  padding-top: 75px;
  padding-bottom: 105px; }

.summary_article-header-paragraph {
  padding-top: 31px; }

.summary_article-paragraph,
.summary_article-header-paragraph {
  padding-bottom: 31px; }

.summary_article-paragraph,
.information_title {
  color: rgba(0, 0, 0, 0.5); }

.summary_article-heading,
.summary_article-header-paragraph,
.summary_article-paragraph,
.details_content-breadcrumb,
.details_content-figure {
  margin: 0; }

@media (min-width: 1440px) {
  .details_content-summary-article {
    grid-column: 2;
    padding-top: 0; }
  .summary_article-heading {
    line-height: 62px;
    font-size: 52px; }
  .summary_article-header-paragraph {
    padding-bottom: 38px; }
  .summary_article-paragraph {
    padding-bottom: 55px; } }

.section_newsletter {
  background: #FFDD78;
  padding-top: 63px;
  padding-bottom: 54px; }

.article_header-link {
  color: #000000;
  font-size: 16px;
  font-weight: normal;
  text-transform: uppercase; }

.newsletter_article-title {
  font-size: 40px; }

@media (min-width: 1440px) {
  .section_newsletter {
    padding-top: 79px;
    padding-bottom: 104px; }
  .newsletter_article {
    display: flex;
    justify-content: space-between; }
  .newsletter_article-header {
    max-width: 382px; }
  .newsletter_article-title {
    font-size: 52px; } }

.email_input {
  border: 1px solid #DADADA;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-top: 16px;
  margin-bottom: 16px;
  max-width: 346px; }

input::-webkit-input-placeholder {
  padding-left: 16px; }

.submit_button {
  background-color: #434CCC;
  color: #FFFFFF;
  font-size: 16px;
  padding-top: calc((48px - 16px) / 2);
  padding-bottom: calc((48px - 16px) / 2);
  padding-left: 45px;
  padding-right: 45px;
  border: none;
  max-height: 48px;
  max-width: 100%; }

.submit_button:hover {
  background-color: #1e27a7;
  box-shadow: 1px 1px 3px #000000; }

.submit_button,
.email_input {
  border-radius: 5px; }

.submit_button,
.section_newsletter label {
  font-weight: 700; }

.section_newsletter label {
  display: flex;
  flex-direction: column;
  font-size: 12px;
  text-transform: uppercase; }

@media (min-width: 1440px) {
  .section_newsletter form {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: calc(346px + 54px + 170px); }
  .email_input {
    margin-bottom: 0;
    width: 346px; }
  .submit_button {
    margin-top: 30px; } }

.site_footer {
  background: #FFFFFF; }

.site_footer-about,
.other_works,
.site_footer_navigation-list,
.information {
  padding-left: 14px;
  padding-right: 14px; }

.information,
.website-information,
.other_works-link,
.site_footer_navigation-list-item .list_item-link {
  color: rgba(0, 0, 0, 0.5); }

.other_works-list-item,
.website-information,
.site_footer_navigation-list,
.information {
  line-height: 24px; }

.other_works-link,
.other_works-details,
.share_link-list {
  display: flex; }

.site_footer-about {
  padding-top: 76px;
  padding-bottom: 79px; }

.site_footer-heading,
.website-information,
.information {
  margin: 0; }

.site_footer-title,
.site_footer_navigation-list-item .active,
.other_works-date {
  color: #000000; }

.site_footer-title {
  font-size: 24px;
  text-transform: uppercase; }

@media (min-width: 1440px) {
  .site_footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding-top: 72px;
    padding-bottom: 75px; }
  .site_footer-about,
  .other_works,
  .site_footer_navigation-list,
  .information {
    padding-left: 0;
    padding-right: 0; }
  .other_works,
  .site_footer-about {
    padding-top: 0; }
  .site_footer_navigation-list,
  .other_works {
    padding-bottom: 79px; } }

.website-information {
  padding-top: 22px;
  padding-bottom: 29px; }

@media (min-width: 1440px) {
  .site_footer-about {
    flex-basis: 20%;
    padding-left: 135px; } }

.site_footer_navigation-list-item .active {
  font-weight: 700;
  padding-bottom: 20px; }

.site_footer_navigation-list-item:nth-of-type(1) {
  padding-bottom: 23px; }
/* ... */

